<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:focusableInTouchMode="false"
    android:background="@drawable/blue3">

    <TextView android:text="@string/welcomestring" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_gravity="right|left"
        android:textSize="30sp"
        android:textIsSelectable="true"
        android:textColor="#fffffbff"
        android:layout_marginBottom="69dp"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_start"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Start"
        android:onClick="selfDestruct"
        android:background="#20000000"
        android:layout_marginBottom="44dp"
        android:textColor="#fffefff9"
        android:textSize="20dp"
        android:layout_above="@+id/checkBoxTraining"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:id="@+id/button_stop"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Stop"
        android:onClick="selfDestruct"
        android:background="#20000000"
        android:textColor="#ffffffff"
        android:textSize="20dp"
        android:layout_alignTop="@+id/button_start"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NotRunning"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fffafffb"
        android:textSize="18dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Training"
        android:id="@+id/checkBoxTraining"
        android:checked="false"
        android:textColor="#fffdffff"
        android:layout_marginBottom="49dp"
        android:textSize="18dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
